Atualização das rotas e readme
